--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,9 @@ body {
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr;
+
+    height: 100vh;
+    width: 100vw;
 }
 
 button {
@@ -71,5 +74,25 @@ header > .logo {
 
 header > button {
     font-size: 1.5rem;
-    
+}
+
+.sidebar {
+    grid-area: 2 / 1 / -1 / 2;
+
+    padding: 1rem;
+
+    height: 100%;
+    width: 10vw;
+
+    background-color: var(--secondary-blue);
+}
+
+.sidebar > h1 {
+    margin: 1rem;
+
+    color: var(--light-blue);
+    font-size: 1.8rem;
+    text-align: center;
+
+    text-decoration: underline;
 }
