--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 :root {
-    --primary-blue: #0b3954;
-    --secondary-blue: #087e8b;
-    --light-blue: #bfd7ea;
+    --primary-blue: #5D688A;
+    --primary-red: #F7A5A5;
+    --primary-yellow: #FFDBB6;
 
-    --primary-red: #ff5a5f;
+    --primary-light: #FFF2EF;
 }
 
 * {
@@ -25,27 +25,27 @@ button {
     padding: 1rem;
 
     font-weight: 700;
-    color: var(--light-blue);
+    color: var(--primary-blue);
 
-    background-color: var(--secondary-blue);
-    border: 0.3rem solid var(--light-blue);
+    background-color: var(--primary-light);
+    border: 0.3rem solid var(--primary-red);
     border-radius: 1rem;
 }
 
 button:hover {
     cursor: pointer;
 
-    color: var(--secondary-blue);
-    background-color: var(--light-blue);
-    border-color: var(--secondary-blue);
+    color: var(--primary-red);
+    background-color: var(--primary-blue);
+    border-color: var(--primary-red);
 }
 
 button:active {
     cursor: pointer;
 
-    color: var(--light-blue);
-    background-color: var(--secondary-blue);
-    border-color: var(--light-blue);
+    color: var(--primary-blue);
+    background-color: var(--primary-light);
+    border-color: var(--primary-red);
 }
 
 header {
@@ -59,7 +59,7 @@ header {
     height: auto;
     padding: 1rem;
 
-    color: var(--light-blue);
+    color: var(--primary-yellow);
     background-color: var(--primary-blue);
 }
 
@@ -86,13 +86,13 @@ header > button {
     height: 100%;
     width: 10vw;
 
-    background-color: var(--secondary-blue);
+    background-color: var(--primary-red);
 }
 
 .sidebar > h1 {
     margin: 1rem;
 
-    color: var(--light-blue);
+    color: var(--primary-blue);
     font-size: 1.8rem;
     text-align: center;
 
@@ -104,5 +104,5 @@ header > button {
     width: 100%;
     height: 100%;
 
-    background-color: var(--primary-red);
+    background-color: var(--primary-light);
 }
