--- a/src/styles.css
+++ b/src/styles.css
@@ -208,3 +208,28 @@ header > button {
     padding: 0.5rem;
     font-size: 1rem;
 }
+
+.sidebar > .current-projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.current-projects > button {
+    border: transparent;
+    background-color: transparent;
+
+    font-size: 1.2rem;
+    color: var(--primary-light);
+
+    padding: 0;
+    margin: 0.8rem;
+}
+
+.current-projects > button:hover {
+    color: var(--primary-blue)
+}
+
+.current-projects > button:active {
+    color: var(--primary-light);
+}
