--- a/src/styles.css
+++ b/src/styles.css
@@ -99,15 +99,6 @@ header > button {
     text-decoration: underline;
 }
 
-.content {
-    grid-area: 2 / 2 / -1 / -1 ;
-    width: 100%;
-    height: 100%;
-
-    background-color: var(--primary-light);
-}
-
-
 .new-project-display {
     position: absolute;
     top: 0;
@@ -232,4 +223,32 @@ header > button {
 
 .current-projects > button:active {
     color: var(--primary-light);
+}
+
+.content {
+    grid-area: 2 / 2 / -1 / -1 ;
+    display: grid;
+    grid-template-rows: auto 1fr;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: var(--primary-light);
+}
+
+.project-todos-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 0.5rem;
+}
+
+.project-todos-header > h1 {
+    color: var(--primary-blue);
+}
+
+.project-todos-header > button {
+    font-size: 1rem;
+    padding: 0.8rem;
 }
