--- a/src/styles.css
+++ b/src/styles.css
@@ -239,10 +239,10 @@ header > button {
 
 .new-task-item {
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto 1fr;
 
     width: 30vw;
-    height: 45vh;
+    height: 40vh;
 
     background-color: var(--primary-yellow);
     border: 0.6rem solid var(--primary-blue);
@@ -265,4 +265,54 @@ header > button {
 
     font-size: 100%;
     padding: 0.1rem;
+}
+
+.new-task-item > form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    height: 100%;
+    width: 100%;
+    padding: 1rem;
+}
+
+.new-task-form > * {
+    width: 100%;
+    height: 15%;
+    padding: 0.3rem;
+
+    font-size: 1rem;
+    background-color: var(--primary-red);
+
+    border: 0.3rem solid var(--primary-blue);
+    border-radius: 0.5rem;
+}
+
+.new-task-form > input:focus {
+    outline: none;
+    box-shadow: 0 0 0.5rem var(--primary-blue);
+}
+
+.new-task-form > button {
+    align-self: center;
+
+    height: 20%;
+    width: 25%;
+    
+    margin:1rem;
+
+    background-color: var(--primary-light);
+}
+
+.new-task-form > button:hover {
+    color: var(--primary-light);
+    border-color: var(--primary-light);
+    background-color: var(--primary-blue);
+}
+
+.new-task-form > button:active {
+    color: var(--primary-blue);
+    border-color: var(--primary-blue);
+    background-color: var(--primary-light);
 }
