--- a/src/styles.css
+++ b/src/styles.css
@@ -316,3 +316,68 @@ header > button {
     border-color: var(--primary-blue);
     background-color: var(--primary-light);
 }
+
+.current-tasks {
+    padding: 1rem;
+}
+
+.current-tasks > .project-task {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 4fr 1fr;
+
+    height: auto;
+    width: 33%;
+
+    color: var(--primary-blue);
+    font-weight: 700;
+
+    border: 0.5rem solid var(--primary-blue);
+    border-radius: 5%;
+
+    background-color: var(--primary-yellow);
+}
+
+.project-task .task-header {
+    grid-area: 1 / 1 / 2 / -1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 0.25rem;
+    border-bottom: 0.3rem solid var(--primary-blue);
+}
+
+.task-header button {
+    font-size: 100%;
+    padding: 0.5rem;
+}
+
+.project-task .task-content {
+    grid-area: 2 / 1 / 3 / -1;
+
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    padding: 0.25rem;
+
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.task-content .sub-tasks{
+    align-self: flex-start;
+    text-decoration: underline;
+}
+
+.project-task .task-footer {
+    grid-area: 3 / 1 / 4 / -1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 0.25rem;
+
+    border-top: 0.3rem solid var(--primary-blue);
+}
