--- a/src/styles.css
+++ b/src/styles.css
@@ -100,7 +100,8 @@ header > button {
 }
 
 .new-project-display,
-.new-project-task {
+.new-project-task,
+.new-sub-task-display {
     position: absolute;
     top: 0;
     left: 0;
@@ -115,7 +116,8 @@ header > button {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.new-project-item {
+.new-project-item,
+.new-sub-task-item {
     width: 20vw;
     height: 20vh;
 
@@ -124,7 +126,8 @@ header > button {
     border-radius: 0.3rem;
 }
 
-.new-project-item > .header {
+.new-project-item > .header,
+.new-sub-task-item > .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -136,18 +139,21 @@ header > button {
     border-bottom: 0.3rem solid var(--primary-blue);
 }
 
-.new-project-item > .header > p {
+.new-project-item > .header > p,
+.new-sub-task-item > .hedaer > p {
     font-size: 1.5rem;
     font-weight: 700;
 }
 
-.new-project-item > .header > button {
+.new-project-item > .header > button,
+.new-sub-task-item > .header > button {
     padding: 0;
     height: 3vh;
     width: 3vh;
 }
 
-.new-project-item > form  {
+.new-project-item > form,
+.new-sub-task-item > form  {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -157,7 +163,8 @@ header > button {
     height: auto;
 }
 
-.new-project-item > form > input {
+.new-project-item > form > input,
+.new-sub-task-item > form > input {
 
     width: 100%;
     height: 25%;
@@ -173,12 +180,14 @@ header > button {
     font-size: 1rem;
 }
 
-.new-project-item > form > input:focus {
+.new-project-item > form > input:focus,
+.new-sub-task-item > form > input:focus {
     outline: none;
     box-shadow: 0 0 0.5rem var(--primary-blue);
 }
 
-.new-project-item > form > button {
+.new-project-item > form > button,
+.new-sub-task-item > form > button {
     width: 30%;
     padding: 0.5rem;
     font-size: 1rem;
