--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,8 @@ header {
 
 header > .logo {
     display: flex;
+    align-self: center;
+    justify-self: center;
 
     font-size: 3rem;
 }
@@ -81,6 +83,10 @@ header > button {
 .sidebar {
     grid-area: 2 / 1 / -1 / 2;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     padding: 1rem;
 
     height: 100%;
@@ -90,7 +96,7 @@ header > button {
 }
 
 .sidebar > h1 {
-    margin: 1rem;
+    margin-bottom: 1rem;
 
     color: var(--primary-blue);
     font-size: 1.8rem;
@@ -197,6 +203,7 @@ header > button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .current-projects > button {
@@ -246,9 +253,15 @@ header > button {
     color: var(--primary-blue);
 }
 
+.project-title > button {
+    text-align: center;
+    padding: 0.5rem;
+    font-size: 1rem;
+}
+
 .project-tasks-header > button {
     font-size: 1rem;
-    padding: 0.8rem;
+    padding: 0.5rem;
 }
 
 .new-task-item {
