--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ body {
     grid-template-rows: auto 1fr;
 
     height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
 }
 
 button {
@@ -108,7 +108,7 @@ header > button {
 .new-project-display,
 .new-project-task,
 .new-sub-task-display {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
 
@@ -116,8 +116,8 @@ header > button {
     justify-content: center;
     align-items: center;
 
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     background-color: rgba(0, 0, 0, 0.5);
 }
@@ -345,6 +345,11 @@ header > button {
 }
 
 .current-tasks {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1rem;
+
     padding: 1rem;
 }
 
@@ -354,7 +359,7 @@ header > button {
     grid-template-rows: 1fr 4fr 1fr;
 
     height: auto;
-    width: 33%;
+    width: 100%;
 
     color: var(--primary-blue);
     font-weight: 700;
